# wallmatic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/wallmatic/: applier.py  config.py  config_cli.py  controller.py  exceptions.py  main.py  selector.py  utils.py
